--- a/cluster/juju/layers/kubernetes-master-worker-base/layer.yaml
+++ b/cluster/juju/layers/kubernetes-master-worker-base/layer.yaml
@@ -1,5 +1,5 @@
 repo: https://github.com/kubernetes/kubernetes.git
 includes:
 - 'layer:kubernetes-common'
-- 'layer:docker'
+- 'interface:container'
 - 'interface:docker-registry'
