WIP: remove layer docker and replace with container-runtime interface

--- a/cluster/juju/layers/kubernetes-master-worker-base/metadata.yaml
+++ b/cluster/juju/layers/kubernetes-master-worker-base/metadata.yaml
@@ -3,5 +3,6 @@ requires:
     interface: docker-registry
 
 provides:
-  docker:
-    interface: container
+  container-runtime:
+    interface: container-runtime
+    scope: container
