--- a/cluster/juju/layers/kubernetes-master/layer.yaml
+++ b/cluster/juju/layers/kubernetes-master/layer.yaml
@@ -15,6 +15,7 @@ includes:
   - 'interface:ceph-admin'
   - 'interface:etcd'
   - 'interface:http'
+  - 'interface:container-runtime'
   - 'interface:kubernetes-cni'
   - 'interface:kube-dns'
   - 'interface:kube-control'
