--- a/cluster/juju/layers/kubernetes-master/metadata.yaml
+++ b/cluster/juju/layers/kubernetes-master/metadata.yaml
@@ -36,6 +36,9 @@ provides:
   cni:
     interface: kubernetes-cni
     scope: container
+  container-runtime:
+    interface: container-runtime
+    scope: container
 requires:
   etcd:
     interface: etcd
